# AIHackerthon_0613-0614

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  README.md  manage.py  pyproject.toml
backend/apps/sar/: admin.py  apps.py  engine_interface.py  mock_briefing.py  mock_engine.py  mock_risk.py  models.py  rag_retriever.py  real_briefing.py  urls.py  views.py
backend/apps/sar/migrations/: 0001_initial.py
backend/drift_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/integrations/: __init__.py  forecast_environment.py  merged_csv_environment.py  public_marine_data.py
backend/tests/: conftest.py  test_mock_engine.py  test_predictions.py  test_public_marine_data.py  test_rag_retriever.py  test_real_engine_integration.py
contracts/: README.md  __init__.py  gen_schemas.py  models.py  openapi.yaml  pyproject.toml
data/: README.md
engine/: README.md  pyproject.toml
engine/artifacts/: README.md  demo_training.csv  l3_correction.joblib  model_metadata.example.json  model_metadata.json  real_training.csv
engine/drift_engine/: __init__.py  config.py  engine.py  exceptions.py  features.py  geo.py  l1_physics.py  l2_monte_carlo.py  l3_correction.py  search_zones.py
engine/drift_engine/data_sources/: __init__.py  environment.py  factory.py  land_mask.py  leeway.py  models.py
engine/scripts/: generate_real_dataset.py  generate_synthetic_dataset.py  smoke_demo_pipeline.py  smoke_l3_artifact.py  train_l3_model.py
engine/tests/: conftest.py  test_historical_data_bundle.py  test_real_engine.py
frontend/: Dockerfile  (+9 more)
(+79 files in other folders)
